--- a/laborator.ipynb
+++ b/laborator.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "f (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function f(x)\n",
     "    return x^2 + x + 1\n",
@@ -23,26 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19.49"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f(2.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,19 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7500000330857244"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = find_min(f, -3, 3, 1e-3)\n",
     "f(x)"
@@ -106,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,19 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.950042025949223"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function f2(x)\n",
     "    return 5 * x^2 + x + 16\n",
@@ -152,19 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1.4142135377371237"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function f3(x)\n",
     "    return sin(x) - cos(x)\n",
@@ -175,19 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-5.091650747516953"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function f4(x)\n",
     "    return exp(x) - cos(x) - 5 * sin(x)\n",
@@ -198,19 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.20861634662483106"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function f5(x)\n",
     "    return x^2 - x * cos(x)\n",
@@ -221,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,6 +169,99 @@
     "    return 2 * x^4 - 4 * x^3 - x^2 + 3 * x + 1\n",
     "end\n",
     "x = find_min(f6, 0, 3, 0.01)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fibonacci_search (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function fibonacci_search(f, a, b, eps)\n",
+    "    fib = Int[]\n",
+    "    n = 2\n",
+    "    append!(fib, 1)\n",
+    "    append!(fib, 1)\n",
+    "    while fib[n] < (b - a) / eps\n",
+    "        n += 1\n",
+    "        append!(fib, fib[n-1] + fib[n-2])\n",
+    "    end\n",
+    "\n",
+    "    l = a + fib[n-2] / fib[n] * (b - a)\n",
+    "    u = a + fib[n-1] / fib[n] * (b - a)\n",
+    "\n",
+    "    fl = f(l)\n",
+    "    fu = f(u)\n",
+    "\n",
+    "    l_prev = -1\n",
+    "    a_prev = -1\n",
+    "    b_prev = -1\n",
+    "\n",
+    "    for k = 1:n-2\n",
+    "\n",
+    "        l_prev = l\n",
+    "        a_prev = a\n",
+    "        b_prev = b\n",
+    "\n",
+    "        if fl >= fu\n",
+    "            a = l\n",
+    "            l = u\n",
+    "            u = a + fib[n-k-1] / fib[n-k] * (b - a)\n",
+    "            fl = fu\n",
+    "            fu = f(u)\n",
+    "        else\n",
+    "            b = u\n",
+    "            u = l\n",
+    "            l = a + fib[n-k-2] / fib[n-k] * (b - a)\n",
+    "            fu = fl\n",
+    "            fl = f(l)\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    l = l_prev\n",
+    "    u = l + eps\n",
+    "    if fl > fu\n",
+    "        a = l\n",
+    "        b = b_prev\n",
+    "    else\n",
+    "        a = a_prev\n",
+    "        b = l\n",
+    "    end\n",
+    "\n",
+    "    return (a + b) / 2\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.9885245901639345\n"
+     ]
+    }
+   ],
+   "source": [
+    "function f1(x)\n",
+    "    return 3 * sin(x) - 2 * cos(x)\n",
+    "end\n",
+    "x = fibonacci_search(f1, -3, 3, 0.01)\n",
+    "println(x)"
    ]
   }
  ],
